--- a/scss/plugin-reset/_formidable.scss
+++ b/scss/plugin-reset/_formidable.scss
@@ -1,4 +1,5 @@
 // this start from the fieldset right through the textarea or input or else
+// refer to input/textarea/checkbox/etc individually to style each of dem
 .frm_style_formidable-style.with_frm_style fieldset {
 	$your_custom_class {
 		margin-bottom: 5px;
