--- a/scss/mixin/_typography.scss
+++ b/scss/mixin/_typography.scss
@@ -17,7 +17,9 @@
 // use @extend to use this
 
 @mixin heading {
-	font-family: $default_font;
+	font: {
+			family: $heading_font;
+		}
 	&:hover {
 
 	}
