--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 h1 {
   font-size: 30px;
-  font-size: 3rem; }
+  font-size: 3rem;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px; }
 
 /*# sourceMappingURL=style.css.map */
