--- a/scss/plugin-reset/_formidable.scss
+++ b/scss/plugin-reset/_formidable.scss
@@ -1,3 +1,4 @@
+// ----------------------
 // this start from the fieldset right through the textarea or input or else
 // refer to input/textarea/checkbox/etc individually to style each of dem
 
@@ -20,6 +21,7 @@
 	}
 }
 
+// ----------------------
 // customize button
 // .frm_style_formidable-style.with_frm_style input[type=submit], .frm_style_formidable-style.with_frm_style .frm_submit input[type=button], .frm_form_submit_style, .frm_style_formidable-style.with_frm_style.frm_login_form input[type=submit] {
 %form-button {
