--- a/scss/mixin/_effects.scss
+++ b/scss/mixin/_effects.scss
@@ -1,3 +1,4 @@
+// ----------------------
 // transition mixer
 
 @mixin transition($args...) {
@@ -21,6 +22,7 @@
   }
 }
 
+// ----------------------
 // animation mixin
 @mixin keyframes($animation-name) {
   @-webkit-keyframes $animation-name {
