--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 h1 {
   font-size: 30px;
   font-size: 3rem;
-  border-radius: 5px; }
+  border-radius: 5px;
+  margin-top: 30px;
+  margin-top: 3rem; }
   h1 else {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
