--- a/sassy/mixin/_effects.scss
+++ b/sassy/mixin/_effects.scss
@@ -1,7 +1,7 @@
 // ----------------------
 // transition mixer
 
-@mixin transition($args...) {
+@mixin transition( $args... ) {
   -webkit-transition: $args;
   -moz-transition: $args;
   -ms-transition: $args;
@@ -10,7 +10,7 @@
 }
 
 // box-shadow mixin
-@mixin box-shadow($top, $left, $blur, $color, $inset: false) {
+@mixin boxShadow( $top, $left, $blur, $color, $inset: false ) {
   @if $inset {
     -webkit-box-shadow:inset $top $left $blur $color;
     -moz-box-shadow:inset $top $left $blur $color;
@@ -24,7 +24,7 @@
 
 // ----------------------
 // animation mixin
-@mixin keyframes($animation-name) {
+@mixin keyframes( $animation-name ) {
   @-webkit-keyframes $animation-name {
     @content;
   }
@@ -42,10 +42,10 @@
   }
 }
 
-@mixin animation($str) {
-  -webkit-animation: #{$str};
-  -moz-animation: #{$str};
-  -ms-animation: #{$str};
-  -o-animation: #{$str};
-  animation: #{$str};      
+@mixin animation( $str ) {
+  -webkit-animation: #{ $str };
+  -moz-animation: #{ $str };
+  -ms-animation: #{ $str };
+  -o-animation: #{ $str };
+  animation: #{ $str };      
 }
