--- a/sassy/variables/_logocolors.scss
+++ b/sassy/variables/_logocolors.scss
@@ -1,36 +1,18 @@
-$twitterHex:	#00aced;
-$twitterRGB:	rgb(0, 172, 237);
-$facebookHex:	#3b5998;
-$facebookRGB:	rgb(59, 89, 152);
-$googleplusHex:	#dd4b39;
-$googleplusRGB:	rgb(221, 75, 57);
-$pinterestHex:	#cb2027;
-$pinterestRGB:	rgb(203, 32, 39);
-$linkedinHex:	#007bb6;
-$linkedinRGB:	rgb(0, 123, 182);
-$youtubeHex:	#bb0000;
-$youtubeRGB:	rgb(187, 0, 0);
-$vimeoHex:		#aad450;
-$vimeoRGB:	rgb(170, 212, 80);
-$tumblrHex:		#32506d;
-$tumblrRGB:	rgb(50, 80, 109);
-$instagramHex:	#517fa4;
-$instagramRGB:	rgb(81, 127, 164);
-$flickrHex:		#ff0084;
-$flickrRGB:	rgb(255, 0, 132);
-$dribbbleHex:	#ea4c89;
-$dribbleRGB:	rgb(234, 76, 137);
-$quoraHex:		#a82400;
-$quoraRGB:	rgb(168, 36, 0);
-$foursquareHex:	#0072b1;
-$foursquareRGB:	rgb(0, 114, 177);
-$wordpressHex:	#21759b;
-$wordpressRGB:	rgb(33, 117, 155);
-$stumbleuponHex:#EB4823;
-$stumbleuponRGB:	rgb(235, 72, 35);
-$yahooHex:		#7B0099;
-$yahooRGB:	rgb(123, 0, 153);
-$bloggerHex:	#fb8f3d;
-$bloggerRGB:	rgb(251, 143, 61);
-$soundcloudHex:	#ff3a00;
-$soundcloudRGB:	rgb(255, 58, 0);
+$twitter:	rgb(0, 172, 237);
+$facebook:	rgb(59, 89, 152);
+$googleplus:	rgb(221, 75, 57);
+$pinterest:	rgb(203, 32, 39);
+$linkedin:	rgb(0, 123, 182);
+$youtube:	rgb(187, 0, 0);
+$vimeo:	rgb(170, 212, 80);
+$tumblr:	rgb(50, 80, 109);
+$instagram:	rgb(81, 127, 164);
+$flickr:	rgb(255, 0, 132);
+$dribble:	rgb(234, 76, 137);
+$quora:	rgb(168, 36, 0);
+$foursquare:	rgb(0, 114, 177);
+$wordpress:	rgb(33, 117, 155);
+$stumbleupon:	rgb(235, 72, 35);
+$yahoo:	rgb(123, 0, 153);
+$blogger:	rgb(251, 143, 61);
+$soundcloud:	rgb(255, 58, 0);
