--- a/sassy/variables/_typography-variables.scss
+++ b/sassy/variables/_typography-variables.scss
@@ -1,3 +1,11 @@
+// -------------------
+// font list
+$font-stack:
+	(group: brandon, id: light, font: ('Brandon Grot W01 Light', san-serif ), weight: 200, style: normal),
+	(group: brandon, id: light-italic, font: ('Brandon Grot W01 Light', san-serif ), weight: 200, style: italic);
+
+
+
 //font families
 $heading-font : somethin;
 $heading-font-secondary : somethin;
@@ -5,16 +13,3 @@ $heading-font-tertiary : somethin;
 
 $heading-weight : somethin;
 
-// -------------------
-// headings template
-// use @extend to use this
-%heading {
-	font: {
-			family: $heading-font;
-			weight: $heading-weight;
-		}
-	&:hover {
-		content: '';
-		position: absolute;
-	}
-}
