--- a/sassy/variables/_colors.scss
+++ b/sassy/variables/_colors.scss
@@ -5,7 +5,16 @@ $color-stack:
 	(group: orange, id: pale, color: #f8a878),
 	(group: orange, id: dark, color: #ad490c),
 	(group: blue, id: normal, color: #426682);
-
+	
+@function color($group, $shade:normal, $transparency:1){
+  @each $color in $color-stack{
+    $c-group: map-get($color, group);
+    $c-shade: map-get($color, id);
+    @if($group == map-get($color, group) and $shade == map-get($color, id)){
+      @return rgba(map-get($color, color), $transparency);
+    }
+  }
+}
 
 // ----------------
 // additional color if necessary
