--- a/style.css
+++ b/style.css
@@ -1,12 +1,47 @@
+/*
+* SassySASS
+* Version : 1.0
+* Author : Nikko Khresna
+* Author URL : mrcl.xyz
+* GitHub : github.com/nikhresna
+*/
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600);
+h1, h2, h3, h4, h5, h6, p, a {
+  opacity: 0.87; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Source Sans Pro";
+  font-weight: 700;
+  text-transform: uppercase; }
+
 h1 {
+  font-size: 36px;
+  font-size: 3.6rem; }
+
+h2 {
   font-size: 30px;
-  font-size: 3rem;
-  border-radius: 5px;
-  margin-top: 30px;
-  margin-top: 3rem; }
-  h1 else {
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -o-border-radius: 5px; }
+  font-size: 3rem; }
+
+h3 {
+  font-size: 24px;
+  font-size: 2.4rem; }
+
+h4 {
+  font-size: 18px;
+  font-size: 1.8rem; }
+
+h5 {
+  font-size: 12px;
+  font-size: 1.2rem; }
+
+h6 {
+  font-size: 10px;
+  font-size: 1rem; }
+
+p {
+  font-family: "Arial";
+  font-size: 16px;
+  font-size: 1.6rem; }
 
 /*# sourceMappingURL=style.css.map */
