--- a/sassy/variables/_colors.scss
+++ b/sassy/variables/_colors.scss
@@ -1,16 +1,268 @@
 // ----------------
 // color list
 $color-stack:
-	(group: orange, id: normal, color: #e67835),
-	(group: orange, id: pale, color: #f8a878),
-	(group: orange, id: dark, color: #ad490c),
-	(group: blue, id: normal, color: #426682);
+( group: Red, shade: 50, color: #ffebee),
+( group: Red, shade: 100, color: #ffcdd2),
+( group: Red, shade: 200, color: #ef9a9a),
+( group: Red, shade: 300, color: #e57373),
+( group: Red, shade: 400, color: #ef5350),
+( group: Red, shade: 500, color: #f44336),
+( group: Red, shade: 600, color: #e53935),
+( group: Red, shade: 700, color: #d32f2f),
+( group: Red, shade: 800, color: #c62828),
+( group: Red, shade: 900, color: #b71c1c),
+( group: Red, shade: A100, color: #ff8a80),
+( group: Red, shade: A200, color: #ff5252),
+( group: Red, shade: A400, color: #ff1744),
+( group: Red, shade: A700, color: #d50000),
+( group: Pink, shade: 50, color: #fce4ec),
+( group: Pink, shade: 100, color: #f8bbd0),
+( group: Pink, shade: 200, color: #f48fb1),
+( group: Pink, shade: 300, color: #f06292),
+( group: Pink, shade: 400, color: #ec407a),
+( group: Pink, shade: 500, color: #e91e63),
+( group: Pink, shade: 600, color: #d81b60),
+( group: Pink, shade: 700, color: #c2185b),
+( group: Pink, shade: 800, color: #ad1457),
+( group: Pink, shade: 900, color: #880e4f),
+( group: Pink, shade: A100, color: #ff80ab),
+( group: Pink, shade: A200, color: #ff4081),
+( group: Pink, shade: A400, color: #f50057),
+( group: Pink, shade: A700, color: #c51162),
+( group: Purple, shade: 50, color: #f3e5f5),
+( group: Purple, shade: 100, color: #e1bee7),
+( group: Purple, shade: 200, color: #ce93d8),
+( group: Purple, shade: 300, color: #ba68c8),
+( group: Purple, shade: 400, color: #ab47bc),
+( group: Purple, shade: 500, color: #9c27b0),
+( group: Purple, shade: 600, color: #8e24aa),
+( group: Purple, shade: 700, color: #7b1fa2),
+( group: Purple, shade: 800, color: #6a1b9a),
+( group: Purple, shade: 900, color: #4a148c),
+( group: Purple, shade: A100, color: #ea80fc),
+( group: Purple, shade: A200, color: #e040fb),
+( group: Purple, shade: A400, color: #d500f9),
+( group: Purple, shade: A700, color: #aa00ff),
+( group: Deep Purple, shade: 50, color: #ede7f6),
+( group: Deep Purple, shade: 100, color: #d1c4e9),
+( group: Deep Purple, shade: 200, color: #b39ddb),
+( group: Deep Purple, shade: 300, color: #9575cd),
+( group: Deep Purple, shade: 400, color: #7e57c2),
+( group: Deep Purple, shade: 500, color: #673ab7),
+( group: Deep Purple, shade: 600, color: #5e35b1),
+( group: Deep Purple, shade: 700, color: #512da8),
+( group: Deep Purple, shade: 800, color: #4527a0),
+( group: Deep Purple, shade: 900, color: #311b92),
+( group: Deep Purple, shade: A100, color: #b388ff),
+( group: Deep Purple, shade: A200, color: #7c4dff),
+( group: Deep Purple, shade: A400, color: #651fff),
+( group: Deep Purple, shade: A700, color: #6200ea),
+( group: Indigo, shade: 50, color: #e8eaf6),
+( group: Indigo, shade: 100, color: #c5cae9),
+( group: Indigo, shade: 200, color: #9fa8da),
+( group: Indigo, shade: 300, color: #7986cb),
+( group: Indigo, shade: 400, color: #5c6bc0),
+( group: Indigo, shade: 500, color: #3f51b5),
+( group: Indigo, shade: 600, color: #3949ab),
+( group: Indigo, shade: 700, color: #303f9f),
+( group: Indigo, shade: 800, color: #283593),
+( group: Indigo, shade: 900, color: #1a237e),
+( group: Indigo, shade: A100, color: #8c9eff),
+( group: Indigo, shade: A200, color: #536dfe),
+( group: Indigo, shade: A400, color: #3d5afe),
+( group: Indigo, shade: A700, color: #304ffe),
+( group: Blue, shade: 50, color: #e3f2fd),
+( group: Blue, shade: 100, color: #bbdefb),
+( group: Blue, shade: 200, color: #90caf9),
+( group: Blue, shade: 300, color: #64b5f6),
+( group: Blue, shade: 400, color: #42a5f5),
+( group: Blue, shade: 500, color: #2196f3),
+( group: Blue, shade: 600, color: #1e88e5),
+( group: Blue, shade: 700, color: #1976d2),
+( group: Blue, shade: 800, color: #1565c0),
+( group: Blue, shade: 900, color: #0d47a1),
+( group: Blue, shade: A100, color: #82b1ff),
+( group: Blue, shade: A200, color: #448aff),
+( group: Blue, shade: A400, color: #2979ff),
+( group: Blue, shade: A700, color: #2962ff),
+( group: Light Blue, shade: 50, color: #e1f5fe),
+( group: Light Blue, shade: 100, color: #b3e5fc),
+( group: Light Blue, shade: 200, color: #81d4fa),
+( group: Light Blue, shade: 300, color: #4fc3f7),
+( group: Light Blue, shade: 400, color: #29b6f6),
+( group: Light Blue, shade: 500, color: #03a9f4),
+( group: Light Blue, shade: 600, color: #039be5),
+( group: Light Blue, shade: 700, color: #0288d1),
+( group: Light Blue, shade: 800, color: #0277bd),
+( group: Light Blue, shade: 900, color: #01579b),
+( group: Light Blue, shade: A100, color: #80d8ff),
+( group: Light Blue, shade: A200, color: #40c4ff),
+( group: Light Blue, shade: A400, color: #00b0ff),
+( group: Light Blue, shade: A700, color: #0091ea),
+( group: Cyan, shade: 50, color: #e0f7fa),
+( group: Cyan, shade: 100, color: #b2ebf2),
+( group: Cyan, shade: 200, color: #80deea),
+( group: Cyan, shade: 300, color: #4dd0e1),
+( group: Cyan, shade: 400, color: #26c6da),
+( group: Cyan, shade: 500, color: #00bcd4),
+( group: Cyan, shade: 600, color: #00acc1),
+( group: Cyan, shade: 700, color: #0097a7),
+( group: Cyan, shade: 800, color: #00838f),
+( group: Cyan, shade: 900, color: #006064),
+( group: Cyan, shade: A100, color: #84ffff),
+( group: Cyan, shade: A200, color: #18ffff),
+( group: Cyan, shade: A400, color: #00e5ff),
+( group: Cyan, shade: A700, color: #00b8d4),
+( group: Teal, shade: 50, color: #e0f2f1),
+( group: Teal, shade: 100, color: #b2dfdb),
+( group: Teal, shade: 200, color: #80cbc4),
+( group: Teal, shade: 300, color: #4db6ac),
+( group: Teal, shade: 400, color: #26a69a),
+( group: Teal, shade: 500, color: #009688),
+( group: Teal, shade: 600, color: #00897b),
+( group: Teal, shade: 700, color: #00796b),
+( group: Teal, shade: 800, color: #00695c),
+( group: Teal, shade: 900, color: #004d40),
+( group: Teal, shade: A100, color: #a7ffeb),
+( group: Teal, shade: A200, color: #64ffda),
+( group: Teal, shade: A400, color: #1de9b6),
+( group: Teal, shade: A700, color: #00bfa5),
+( group: Green, shade: 50, color: #e8f5e9),
+( group: Green, shade: 100, color: #c8e6c9),
+( group: Green, shade: 200, color: #a5d6a7),
+( group: Green, shade: 300, color: #81c784),
+( group: Green, shade: 400, color: #66bb6a),
+( group: Green, shade: 500, color: #4caf50),
+( group: Green, shade: 600, color: #43a047),
+( group: Green, shade: 700, color: #388e3c),
+( group: Green, shade: 800, color: #2e7d32),
+( group: Green, shade: 900, color: #1b5e20),
+( group: Green, shade: A100, color: #b9f6ca),
+( group: Green, shade: A200, color: #69f0ae),
+( group: Green, shade: A400, color: #00e676),
+( group: Green, shade: A700, color: #00c853),
+( group: Light Green, shade: 50, color: #f1f8e9),
+( group: Light Green, shade: 100, color: #dcedc8),
+( group: Light Green, shade: 200, color: #c5e1a5),
+( group: Light Green, shade: 300, color: #aed581),
+( group: Light Green, shade: 400, color: #9ccc65),
+( group: Light Green, shade: 500, color: #8bc34a),
+( group: Light Green, shade: 600, color: #7cb342),
+( group: Light Green, shade: 700, color: #689f38),
+( group: Light Green, shade: 800, color: #558b2f),
+( group: Light Green, shade: 900, color: #33691e),
+( group: Light Green, shade: A100, color: #ccff90),
+( group: Light Green, shade: A200, color: #b2ff59),
+( group: Light Green, shade: A400, color: #76ff03),
+( group: Light Green, shade: A700, color: #64dd17),
+( group: Lime, shade: 50, color: #f9fbe7),
+( group: Lime, shade: 100, color: #f0f4c3),
+( group: Lime, shade: 200, color: #e6ee9c),
+( group: Lime, shade: 300, color: #dce775),
+( group: Lime, shade: 400, color: #d4e157),
+( group: Lime, shade: 500, color: #cddc39),
+( group: Lime, shade: 600, color: #c0ca33),
+( group: Lime, shade: 700, color: #afb42b),
+( group: Lime, shade: 800, color: #9e9d24),
+( group: Lime, shade: 900, color: #827717),
+( group: Lime, shade: A100, color: #f4ff81),
+( group: Lime, shade: A200, color: #eeff41),
+( group: Lime, shade: A400, color: #c6ff00),
+( group: Lime, shade: A700, color: #aeea00),
+( group: Yellow, shade: 50, color: #fffde7),
+( group: Yellow, shade: 100, color: #fff9c4),
+( group: Yellow, shade: 200, color: #fff59d),
+( group: Yellow, shade: 300, color: #fff176),
+( group: Yellow, shade: 400, color: #ffee58),
+( group: Yellow, shade: 500, color: #ffeb3b),
+( group: Yellow, shade: 600, color: #fdd835),
+( group: Yellow, shade: 700, color: #fbc02d),
+( group: Yellow, shade: 800, color: #f9a825),
+( group: Yellow, shade: 900, color: #f57f17),
+( group: Yellow, shade: A100, color: #ffff8d),
+( group: Yellow, shade: A200, color: #ffff00),
+( group: Yellow, shade: A400, color: #ffea00),
+( group: Yellow, shade: A700, color: #ffd600),
+( group: Amber, shade: 50, color: #fff8e1),
+( group: Amber, shade: 100, color: #ffecb3),
+( group: Amber, shade: 200, color: #ffe082),
+( group: Amber, shade: 300, color: #ffd54f),
+( group: Amber, shade: 400, color: #ffca28),
+( group: Amber, shade: 500, color: #ffc107),
+( group: Amber, shade: 600, color: #ffb300),
+( group: Amber, shade: 700, color: #ffa000),
+( group: Amber, shade: 800, color: #ff8f00),
+( group: Amber, shade: 900, color: #ff6f00),
+( group: Amber, shade: A100, color: #ffe57f),
+( group: Amber, shade: A200, color: #ffd740),
+( group: Amber, shade: A400, color: #ffc400),
+( group: Amber, shade: A700, color: #ffab00),
+( group: Orange, shade: 50, color: #fff3e0),
+( group: Orange, shade: 100, color: #ffe0b2),
+( group: Orange, shade: 200, color: #ffcc80),
+( group: Orange, shade: 300, color: #ffb74d),
+( group: Orange, shade: 400, color: #ffa726),
+( group: Orange, shade: 500, color: #ff9800),
+( group: Orange, shade: 600, color: #fb8c00),
+( group: Orange, shade: 700, color: #f57c00),
+( group: Orange, shade: 800, color: #ef6c00),
+( group: Orange, shade: 900, color: #e65100),
+( group: Orange, shade: A100, color: #ffd180),
+( group: Orange, shade: A200, color: #ffab40),
+( group: Orange, shade: A400, color: #ff9100),
+( group: Orange, shade: A700, color: #ff6d00),
+( group: Deep Orange, shade: 50, color: #fbe9e7),
+( group: Deep Orange, shade: 100, color: #ffccbc),
+( group: Deep Orange, shade: 200, color: #ffab91),
+( group: Deep Orange, shade: 300, color: #ff8a65),
+( group: Deep Orange, shade: 400, color: #ff7043),
+( group: Deep Orange, shade: 500, color: #ff5722),
+( group: Deep Orange, shade: 600, color: #f4511e),
+( group: Deep Orange, shade: 700, color: #e64a19),
+( group: Deep Orange, shade: 800, color: #d84315),
+( group: Deep Orange, shade: 900, color: #bf360c),
+( group: Deep Orange, shade: A100, color: #ff9e80),
+( group: Deep Orange, shade: A200, color: #ff6e40),
+( group: Deep Orange, shade: A400, color: #ff3d00),
+( group: Deep Orange, shade: A700, color: #dd2c00),
+( group: Brown, shade: 50, color: #efebe9),
+( group: Brown, shade: 100, color: #d7ccc8),
+( group: Brown, shade: 200, color: #bcaaa4),
+( group: Brown, shade: 300, color: #a1887f),
+( group: Brown, shade: 400, color: #8d6e63),
+( group: Brown, shade: 500, color: #795548),
+( group: Brown, shade: 600, color: #6d4c41),
+( group: Brown, shade: 700, color: #5d4037),
+( group: Brown, shade: 800, color: #4e342e),
+( group: Brown, shade: 900, color: #3e2723),
+( group: Grey, shade: 50, color: #fafafa),
+( group: Grey, shade: 100, color: #f5f5f5),
+( group: Grey, shade: 200, color: #eeeeee),
+( group: Grey, shade: 300, color: #e0e0e0),
+( group: Grey, shade: 400, color: #bdbdbd),
+( group: Grey, shade: 500, color: #9e9e9e),
+( group: Grey, shade: 600, color: #757575),
+( group: Grey, shade: 700, color: #616161),
+( group: Grey, shade: 800, color: #424242),
+( group: Grey, shade: 900, color: #212121),
+( group: Blue Grey, shade: 50, color: #eceff1),
+( group: Blue Grey, shade: 100, color: #cfd8dc),
+( group: Blue Grey, shade: 200, color: #b0bec5),
+( group: Blue Grey, shade: 300, color: #90a4ae),
+( group: Blue Grey, shade: 400, color: #78909c),
+( group: Blue Grey, shade: 500, color: #607d8b),
+( group: Blue Grey, shade: 600, color: #546e7a),
+( group: Blue Grey, shade: 700, color: #455a64),
+( group: Blue Grey, shade: 800, color: #37474f),
+( group: Blue Grey, shade: 900, color: #263238),
+( group: Blue Grey, shade: Black, color: #000000),
+( group: Blue Grey, shade: White, color: #ffffff);
 	
-@function color($group, $shade:normal, $transparency:1){
+@function color($group, $shade, $transparency:1){
   @each $color in $color-stack{
     $c-group: map-get($color, group);
-    $c-shade: map-get($color, id);
-    @if($group == map-get($color, group) and $shade == map-get($color, id)){
+    $c-shade: map-get($color, shade);
+    @if($group == map-get($color, group) and $shade == map-get($color, shade)){
       @return rgba(map-get($color, color), $transparency);
     }
   }
